src/main/java/compiler/parser/StipulaParser.java
// Generated from Stipula.g4 by ANTLR 4.10
package compiler.parser;

import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.atn.ATN;
import org.antlr.v4.runtime.atn.ATNDeserializer;
import org.antlr.v4.runtime.atn.ParserATNSimulator;
import org.antlr.v4.runtime.atn.PredictionContextCache;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.tree.ParseTreeListener;
import org.antlr.v4.runtime.tree.ParseTreeVisitor;
import org.antlr.v4.runtime.tree.TerminalNode;

import java.util.ArrayList;
import java.util.List;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class StipulaParser extends Parser {
    static {
        RuntimeMetaData.checkVersion("4.10", RuntimeMetaData.VERSION);
    }

    protected static final DFA[] _decisionToDFA;
    protected static final PredictionContextCache _sharedContextCache =
            new PredictionContextCache();
    public static final int
            SEMIC = 1, COLON = 2, COMMA = 3, DOT = 4, EQ = 5, NEQ = 6, IMPL = 7, ASM = 8, ASSETUP = 9,
            FIELDUP = 10, PLUS = 11, MINUS = 12, TIMES = 13, DIV = 14, AT = 15, TRUE = 16, FALSE = 17,
            LPAR = 18, RPAR = 19, SLPAR = 20, SRPAR = 21, CLPAR = 22, CRPAR = 23, LEQ = 24, GEQ = 25,
            LE = 26, GE = 27, OR = 28, AND = 29, NOT = 30, EMPTY = 31, NOW = 32, TRIGGER = 33, IF = 34,
            ELSEIF = 35, ELSE = 36, STIPULA = 37, ASSET = 38, FIELD = 39, AGREEMENT = 40, INTEGER = 41,
            DOUBLE = 42, BOOLEAN = 43, STRING = 44, PARTY = 45, INIT = 46, RAWSTRING = 47, INT = 48,
            REAL = 49, WS = 50, ID = 51, OTHER = 52, LINECOMENTS = 53, BLOCKCOMENTS = 54, ERR = 55;
    public static final int
            RULE_prog = 0, RULE_agreement = 1, RULE_assetdecl = 2, RULE_fielddecl = 3,
            RULE_fun = 4, RULE_assign = 5, RULE_dec = 6, RULE_type = 7, RULE_state = 8,
            RULE_party = 9, RULE_vardec = 10, RULE_assetdec = 11, RULE_varasm = 12,
            RULE_stat = 13, RULE_ifelse = 14, RULE_events = 15, RULE_prec = 16, RULE_expr = 17,
            RULE_term = 18, RULE_factor = 19, RULE_value = 20, RULE_real = 21, RULE_number = 22;

    private static String[] makeRuleNames() {
        return new String[]{
                "prog", "agreement", "assetdecl", "fielddecl", "fun", "assign", "dec",
                "type", "state", "party", "vardec", "assetdec", "varasm", "stat", "ifelse",
                "events", "prec", "expr", "term", "factor", "value", "real", "number"
        };
    }

    public static final String[] ruleNames = makeRuleNames();

    private static String[] makeLiteralNames() {
        return new String[]{
                null, "';'", "':'", "','", "'.'", "'=='", "'!='", "'==>'", "'='", "'-o'",
                "'->'", "'+'", "'-'", "'*'", "'/'", "'@'", "'true'", "'false'", "'('",
                "')'", "'['", "']'", "'{'", "'}'", "'<='", "'>='", "'<'", "'>'", "'||'",
                "'&&'", "'!'", "'_'", "'now'", "'>>'", "'if'", "'else if'", "'else'",
                "'stipula'", "'asset'", "'field'", "'agreement'", "'int'", "'real'",
                "'bool'", "'string'", "'party'", "'init'"
        };
    }

    private static final String[] _LITERAL_NAMES = makeLiteralNames();

    private static String[] makeSymbolicNames() {
        return new String[]{
                null, "SEMIC", "COLON", "COMMA", "DOT", "EQ", "NEQ", "IMPL", "ASM", "ASSETUP",
                "FIELDUP", "PLUS", "MINUS", "TIMES", "DIV", "AT", "TRUE", "FALSE", "LPAR",
                "RPAR", "SLPAR", "SRPAR", "CLPAR", "CRPAR", "LEQ", "GEQ", "LE", "GE",
                "OR", "AND", "NOT", "EMPTY", "NOW", "TRIGGER", "IF", "ELSEIF", "ELSE",
                "STIPULA", "ASSET", "FIELD", "AGREEMENT", "INTEGER", "DOUBLE", "BOOLEAN",
                "STRING", "PARTY", "INIT", "RAWSTRING", "INT", "REAL", "WS", "ID", "OTHER",
                "LINECOMENTS", "BLOCKCOMENTS", "ERR"
        };
    }

    private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
    public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

    /**
     * @deprecated Use {@link #VOCABULARY} instead.
     */
    @Deprecated
    public static final String[] tokenNames;

    static {
        tokenNames = new String[_SYMBOLIC_NAMES.length];
        for (int i = 0; i < tokenNames.length; i++) {
            tokenNames[i] = VOCABULARY.getLiteralName(i);
            if (tokenNames[i] == null) {
                tokenNames[i] = VOCABULARY.getSymbolicName(i);
            }

            if (tokenNames[i] == null) {
                tokenNames[i] = "<INVALID>";
            }
        }
    }

    @Override
    @Deprecated
    public String[] getTokenNames() {
        return tokenNames;
    }

    @Override

    public Vocabulary getVocabulary() {
        return VOCABULARY;
    }

    @Override
    public String getGrammarFileName() {
        return "Stipula.g4";
    }

    @Override
    public String[] getRuleNames() {
        return ruleNames;
    }

    @Override
    public String getSerializedATN() {
        return _serializedATN;
    }

    @Override
    public ATN getATN() {
        return _ATN;
    }

    public StipulaParser(TokenStream input) {
        super(input);
        _interp = new ParserATNSimulator(this, _ATN, _decisionToDFA, _sharedContextCache);
    }

    public static class ProgContext extends ParserRuleContext {
        public Token contract_id;
        public Token init_state;

        public TerminalNode STIPULA() {
            return getToken(StipulaParser.STIPULA, 0);
        }

        public TerminalNode CLPAR() {
            return getToken(StipulaParser.CLPAR, 0);
        }

        public TerminalNode INIT() {
            return getToken(StipulaParser.INIT, 0);
        }

        public AgreementContext agreement() {
            return getRuleContext(AgreementContext.class, 0);
        }

        public TerminalNode CRPAR() {
            return getToken(StipulaParser.CRPAR, 0);
        }

        public List<TerminalNode> ID() {
            return getTokens(StipulaParser.ID);
        }

        public TerminalNode ID(int i) {
            return getToken(StipulaParser.ID, i);
        }

        public AssetdeclContext assetdecl() {
            return getRuleContext(AssetdeclContext.class, 0);
        }

        public FielddeclContext fielddecl() {
            return getRuleContext(FielddeclContext.class, 0);
        }

        public List<FunContext> fun() {
            return getRuleContexts(FunContext.class);
        }

        public FunContext fun(int i) {
            return getRuleContext(FunContext.class, i);
        }

        public ProgContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_prog;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof StipulaListener) ((StipulaListener) listener).enterProg(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof StipulaListener) ((StipulaListener) listener).exitProg(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof StipulaVisitor) return ((StipulaVisitor<? extends T>) visitor).visitProg(this);
            else return visitor.visitChildren(this);
        }
    }

    public final ProgContext prog() throws RecognitionException {
        ProgContext _localctx = new ProgContext(_ctx, getState());
        enterRule(_localctx, 0, RULE_prog);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(46);
                match(STIPULA);
                setState(47);
                ((ProgContext) _localctx).contract_id = match(ID);
                setState(48);
                match(CLPAR);
                setState(50);
                _errHandler.sync(this);
                _la = _input.LA(1);
                if (_la == ASSET) {
                    {
                        setState(49);
                        assetdecl();
                    }
                }

                setState(53);
                _errHandler.sync(this);
                _la = _input.LA(1);
                if (_la == FIELD) {
                    {
                        setState(52);
                        fielddecl();
                    }
                }

                setState(55);
                match(INIT);
                setState(56);
                ((ProgContext) _localctx).init_state = match(ID);
                setState(57);
                agreement();
                setState(59);
                _errHandler.sync(this);
                _la = _input.LA(1);
                do {
                    {
                        {
                            setState(58);
                            fun();
                        }
                    }
                    setState(61);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                } while (_la == AT || _la == ID);
                setState(63);
                match(CRPAR);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class AgreementContext extends ParserRuleContext {
        public TerminalNode AGREEMENT() {
            return getToken(StipulaParser.AGREEMENT, 0);
        }

        public List<TerminalNode> LPAR() {
            return getTokens(StipulaParser.LPAR);
        }

        public TerminalNode LPAR(int i) {
            return getToken(StipulaParser.LPAR, i);
        }

        public List<PartyContext> party() {
            return getRuleContexts(PartyContext.class);
        }

        public PartyContext party(int i) {
            return getRuleContext(PartyContext.class, i);
        }

        public List<TerminalNode> RPAR() {
            return getTokens(StipulaParser.RPAR);
        }

        public TerminalNode RPAR(int i) {
            return getToken(StipulaParser.RPAR, i);
        }

        public List<VardecContext> vardec() {
            return getRuleContexts(VardecContext.class);
        }

        public VardecContext vardec(int i) {
            return getRuleContext(VardecContext.class, i);
        }

        public TerminalNode CLPAR() {
            return getToken(StipulaParser.CLPAR, 0);
        }

        public TerminalNode CRPAR() {
            return getToken(StipulaParser.CRPAR, 0);
        }

        public TerminalNode IMPL() {
            return getToken(StipulaParser.IMPL, 0);
        }

        public TerminalNode AT() {
            return getToken(StipulaParser.AT, 0);
        }

        public StateContext state() {
            return getRuleContext(StateContext.class, 0);
        }

        public List<TerminalNode> COMMA() {
            return getTokens(StipulaParser.COMMA);
        }

        public TerminalNode COMMA(int i) {
            return getToken(StipulaParser.COMMA, i);
        }

        public List<AssignContext> assign() {
            return getRuleContexts(AssignContext.class);
        }

        public AssignContext assign(int i) {
            return getRuleContext(AssignContext.class, i);
        }

        public AgreementContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_agreement;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof StipulaListener) ((StipulaListener) listener).enterAgreement(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof StipulaListener) ((StipulaListener) listener).exitAgreement(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof StipulaVisitor) return ((StipulaVisitor<? extends T>) visitor).visitAgreement(this);
            else return visitor.visitChildren(this);
        }
    }

    public final AgreementContext agreement() throws RecognitionException {
        AgreementContext _localctx = new AgreementContext(_ctx, getState());
        enterRule(_localctx, 2, RULE_agreement);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                {
                    setState(65);
                    match(AGREEMENT);
                    setState(66);
                    match(LPAR);
                    setState(67);
                    party();
                    setState(72);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                    while (_la == COMMA) {
                        {
                            {
                                setState(68);
                                match(COMMA);
                                setState(69);
                                party();
                            }
                        }
                        setState(74);
                        _errHandler.sync(this);
                        _la = _input.LA(1);
                    }
                    setState(75);
                    match(RPAR);
                    setState(76);
                    match(LPAR);
                    setState(77);
                    vardec();
                    setState(82);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                    while (_la == COMMA) {
                        {
                            {
                                setState(78);
                                match(COMMA);
                                setState(79);
                                vardec();
                            }
                        }
                        setState(84);
                        _errHandler.sync(this);
                        _la = _input.LA(1);
                    }
                    setState(85);
                    match(RPAR);
                    setState(86);
                    match(CLPAR);
                    setState(88);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                    do {
                        {
                            {
                                setState(87);
                                assign();
                            }
                        }
                        setState(90);
                        _errHandler.sync(this);
                        _la = _input.LA(1);
                    } while (_la == ID);
                    setState(92);
                    match(CRPAR);
                    setState(93);
                    match(IMPL);
                    setState(94);
                    match(AT);
                    setState(95);
                    state();
                }
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class AssetdeclContext extends ParserRuleContext {
        public Token ID;
        public List<Token> idAsset = new ArrayList<Token>();

        public TerminalNode ASSET() {
            return getToken(StipulaParser.ASSET, 0);
        }

        public List<TerminalNode> ID() {
            return getTokens(StipulaParser.ID);
        }

        public TerminalNode ID(int i) {
            return getToken(StipulaParser.ID, i);
        }

        public List<TerminalNode> COMMA() {
            return getTokens(StipulaParser.COMMA);
        }

        public TerminalNode COMMA(int i) {
            return getToken(StipulaParser.COMMA, i);
        }

        public AssetdeclContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_assetdecl;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof StipulaListener) ((StipulaListener) listener).enterAssetdecl(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof StipulaListener) ((StipulaListener) listener).exitAssetdecl(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof StipulaVisitor) return ((StipulaVisitor<? extends T>) visitor).visitAssetdecl(this);
            else return visitor.visitChildren(this);
        }
    }

    public final AssetdeclContext assetdecl() throws RecognitionException {
        AssetdeclContext _localctx = new AssetdeclContext(_ctx, getState());
        enterRule(_localctx, 4, RULE_assetdecl);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(97);
                match(ASSET);
                setState(98);
                ((AssetdeclContext) _localctx).ID = match(ID);
                ((AssetdeclContext) _localctx).idAsset.add(((AssetdeclContext) _localctx).ID);
                setState(103);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while (_la == COMMA) {
                    {
                        {
                            setState(99);
                            match(COMMA);
                            setState(100);
                            ((AssetdeclContext) _localctx).ID = match(ID);
                            ((AssetdeclContext) _localctx).idAsset.add(((AssetdeclContext) _localctx).ID);
                        }
                    }
                    setState(105);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class FielddeclContext extends ParserRuleContext {
        public Token ID;
        public List<Token> idField = new ArrayList<Token>();

        public TerminalNode FIELD() {
            return getToken(StipulaParser.FIELD, 0);
        }

        public List<TerminalNode> ID() {
            return getTokens(StipulaParser.ID);
        }

        public TerminalNode ID(int i) {
            return getToken(StipulaParser.ID, i);
        }

        public List<TerminalNode> COMMA() {
            return getTokens(StipulaParser.COMMA);
        }

        public TerminalNode COMMA(int i) {
            return getToken(StipulaParser.COMMA, i);
        }

        public FielddeclContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_fielddecl;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof StipulaListener) ((StipulaListener) listener).enterFielddecl(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof StipulaListener) ((StipulaListener) listener).exitFielddecl(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof StipulaVisitor) return ((StipulaVisitor<? extends T>) visitor).visitFielddecl(this);
            else return visitor.visitChildren(this);
        }
    }

    public final FielddeclContext fielddecl() throws RecognitionException {
        FielddeclContext _localctx = new FielddeclContext(_ctx, getState());
        enterRule(_localctx, 6, RULE_fielddecl);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(106);
                match(FIELD);
                setState(107);
                ((FielddeclContext) _localctx).ID = match(ID);
                ((FielddeclContext) _localctx).idField.add(((FielddeclContext) _localctx).ID);
                setState(112);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while (_la == COMMA) {
                    {
                        {
                            setState(108);
                            match(COMMA);
                            setState(109);
                            ((FielddeclContext) _localctx).ID = match(ID);
                            ((FielddeclContext) _localctx).idField.add(((FielddeclContext) _localctx).ID);
                        }
                    }
                    setState(114);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class FunContext extends ParserRuleContext {
        public Token funId;

        public List<PartyContext> party() {
            return getRuleContexts(PartyContext.class);
        }

        public PartyContext party(int i) {
            return getRuleContext(PartyContext.class, i);
        }

        public TerminalNode COLON() {
            return getToken(StipulaParser.COLON, 0);
        }

        public List<TerminalNode> LPAR() {
            return getTokens(StipulaParser.LPAR);
        }

        public TerminalNode LPAR(int i) {
            return getToken(StipulaParser.LPAR, i);
        }

        public List<TerminalNode> RPAR() {
            return getTokens(StipulaParser.RPAR);
        }

        public TerminalNode RPAR(int i) {
            return getToken(StipulaParser.RPAR, i);
        }

        public TerminalNode SLPAR() {
            return getToken(StipulaParser.SLPAR, 0);
        }

        public TerminalNode SRPAR() {
            return getToken(StipulaParser.SRPAR, 0);
        }

        public TerminalNode CLPAR() {
            return getToken(StipulaParser.CLPAR, 0);
        }

        public TerminalNode SEMIC() {
            return getToken(StipulaParser.SEMIC, 0);
        }

        public TerminalNode CRPAR() {
            return getToken(StipulaParser.CRPAR, 0);
        }

        public TerminalNode IMPL() {
            return getToken(StipulaParser.IMPL, 0);
        }

        public List<TerminalNode> AT() {
            return getTokens(StipulaParser.AT);
        }

        public TerminalNode AT(int i) {
            return getToken(StipulaParser.AT, i);
        }

        public List<StateContext> state() {
            return getRuleContexts(StateContext.class);
        }

        public StateContext state(int i) {
            return getRuleContext(StateContext.class, i);
        }

        public TerminalNode ID() {
            return getToken(StipulaParser.ID, 0);
        }

        public List<TerminalNode> COMMA() {
            return getTokens(StipulaParser.COMMA);
        }

        public TerminalNode COMMA(int i) {
            return getToken(StipulaParser.COMMA, i);
        }

        public List<VardecContext> vardec() {
            return getRuleContexts(VardecContext.class);
        }

        public VardecContext vardec(int i) {
            return getRuleContext(VardecContext.class, i);
        }

        public List<AssetdecContext> assetdec() {
            return getRuleContexts(AssetdecContext.class);
        }

        public AssetdecContext assetdec(int i) {
            return getRuleContext(AssetdecContext.class, i);
        }

        public PrecContext prec() {
            return getRuleContext(PrecContext.class, 0);
        }

        public List<StatContext> stat() {
            return getRuleContexts(StatContext.class);
        }

        public StatContext stat(int i) {
            return getRuleContext(StatContext.class, i);
        }

        public List<EventsContext> events() {
            return getRuleContexts(EventsContext.class);
        }

        public EventsContext events(int i) {
            return getRuleContext(EventsContext.class, i);
        }

        public FunContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_fun;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof StipulaListener) ((StipulaListener) listener).enterFun(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof StipulaListener) ((StipulaListener) listener).exitFun(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof StipulaVisitor) return ((StipulaVisitor<? extends T>) visitor).visitFun(this);
            else return visitor.visitChildren(this);
        }
    }

    public final FunContext fun() throws RecognitionException {
        FunContext _localctx = new FunContext(_ctx, getState());
        enterRule(_localctx, 8, RULE_fun);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                {
                    setState(119);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                    while (_la == AT) {
                        {
                            {
                                setState(115);
                                match(AT);
                                setState(116);
                                state();
                            }
                        }
                        setState(121);
                        _errHandler.sync(this);
                        _la = _input.LA(1);
                    }
                    setState(122);
                    party();
                    setState(127);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                    while (_la == COMMA) {
                        {
                            {
                                setState(123);
                                match(COMMA);
                                setState(124);
                                party();
                            }
                        }
                        setState(129);
                        _errHandler.sync(this);
                        _la = _input.LA(1);
                    }
                    setState(130);
                    match(COLON);
                    setState(131);
                    ((FunContext) _localctx).funId = match(ID);
                    setState(132);
                    match(LPAR);
                    setState(141);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                    if (_la == ID) {
                        {
                            setState(133);
                            vardec();
                            setState(138);
                            _errHandler.sync(this);
                            _la = _input.LA(1);
                            while (_la == COMMA) {
                                {
                                    {
                                        setState(134);
                                        match(COMMA);
                                        setState(135);
                                        vardec();
                                    }
                                }
                                setState(140);
                                _errHandler.sync(this);
                                _la = _input.LA(1);
                            }
                        }
                    }

                    setState(143);
                    match(RPAR);
                    setState(144);
                    match(SLPAR);
                    setState(153);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                    if (_la == ID) {
                        {
                            setState(145);
                            assetdec();
                            setState(150);
                            _errHandler.sync(this);
                            _la = _input.LA(1);
                            while (_la == COMMA) {
                                {
                                    {
                                        setState(146);
                                        match(COMMA);
                                        setState(147);
                                        assetdec();
                                    }
                                }
                                setState(152);
                                _errHandler.sync(this);
                                _la = _input.LA(1);
                            }
                        }
                    }

                    setState(155);
                    match(SRPAR);
                    setState(160);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                    if (_la == LPAR) {
                        {
                            setState(156);
                            match(LPAR);
                            setState(157);
                            prec();
                            setState(158);
                            match(RPAR);
                        }
                    }

                    setState(162);
                    match(CLPAR);
                    setState(164);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                    do {
                        {
                            {
                                setState(163);
                                stat();
                            }
                        }
                        setState(166);
                        _errHandler.sync(this);
                        _la = _input.LA(1);
                    } while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << TRUE) | (1L << FALSE) | (1L << LPAR) | (1L << EMPTY) | (1L << NOW) | (1L << IF) | (1L << RAWSTRING) | (1L << INT) | (1L << REAL) | (1L << ID))) != 0));
                    setState(168);
                    match(SEMIC);
                    setState(170);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                    do {
                        {
                            {
                                setState(169);
                                events();
                            }
                        }
                        setState(172);
                        _errHandler.sync(this);
                        _la = _input.LA(1);
                    } while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << MINUS) | (1L << TRUE) | (1L << FALSE) | (1L << LPAR) | (1L << EMPTY) | (1L << NOW) | (1L << RAWSTRING) | (1L << INT) | (1L << REAL) | (1L << ID))) != 0));
                    setState(174);
                    match(CRPAR);
                    setState(175);
                    match(IMPL);
                    setState(176);
                    match(AT);
                    setState(177);
                    state();
                }
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class AssignContext extends ParserRuleContext {
        public List<PartyContext> party() {
            return getRuleContexts(PartyContext.class);
        }

        public PartyContext party(int i) {
            return getRuleContext(PartyContext.class, i);
        }

        public TerminalNode COLON() {
            return getToken(StipulaParser.COLON, 0);
        }

        public List<VardecContext> vardec() {
            return getRuleContexts(VardecContext.class);
        }

        public VardecContext vardec(int i) {
            return getRuleContext(VardecContext.class, i);
        }

        public List<TerminalNode> COMMA() {
            return getTokens(StipulaParser.COMMA);
        }

        public TerminalNode COMMA(int i) {
            return getToken(StipulaParser.COMMA, i);
        }

        public AssignContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_assign;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof StipulaListener) ((StipulaListener) listener).enterAssign(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof StipulaListener) ((StipulaListener) listener).exitAssign(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof StipulaVisitor) return ((StipulaVisitor<? extends T>) visitor).visitAssign(this);
            else return visitor.visitChildren(this);
        }
    }

    public final AssignContext assign() throws RecognitionException {
        AssignContext _localctx = new AssignContext(_ctx, getState());
        enterRule(_localctx, 10, RULE_assign);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                {
                    setState(179);
                    party();
                    setState(184);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                    while (_la == COMMA) {
                        {
                            {
                                setState(180);
                                match(COMMA);
                                setState(181);
                                party();
                            }
                        }
                        setState(186);
                        _errHandler.sync(this);
                        _la = _input.LA(1);
                    }
                    setState(187);
                    match(COLON);
                    setState(188);
                    vardec();
                    setState(193);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                    while (_la == COMMA) {
                        {
                            {
                                setState(189);
                                match(COMMA);
                                setState(190);
                                vardec();
                            }
                        }
                        setState(195);
                        _errHandler.sync(this);
                        _la = _input.LA(1);
                    }
                }
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class DecContext extends ParserRuleContext {
        public TerminalNode ID() {
            return getToken(StipulaParser.ID, 0);
        }

        public TerminalNode ASSET() {
            return getToken(StipulaParser.ASSET, 0);
        }
